--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -8,8 +8,20 @@ body {
   // background-image: url('https://wallpaperaccess.com/full/4131921.jpg');
   color: pink !important;
 }
-body::-webkit-scrollbar {
-  width: 1em !important;
+::-webkit-scrollbar {
+  width: 20px;
+}
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #d6dee1;
+  border-radius: 20px;
+  border: 6px solid transparent;
+  background-clip: content-box;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: #a8bbbf;
 }
 .logBtn{
   color: pink !important;
@@ -69,6 +81,7 @@ input#cpassword{
 
 .animeRow{
   overflow-x: auto !important;
+  overflow-y: hidden !important;
   flex-wrap: nowrap !important;
 }
 .animeRow::-webkit-scrollbar-track{
